fixed headshot image on mobile

--- a/src/components/Headshot/Headshot.css
+++ b/src/components/Headshot/Headshot.css
@@ -1,11 +1,21 @@
 .dark {
   border-radius: 50%;
+  transition: 0.1s ease-in transform;
   border: 20px solid #232529;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.4);
 }
 
+.dark:hover {
+  transform: scale(1.02, 1.02);
+}
+
 .light {
   border-radius: 50%;
+  transition: 0.1s ease-in transform;
   border: 20px solid #dedfe1;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+}
+
+.light:hover {
+  transform: scale(1.02, 1.02);
 }
